tests/sksl/errors/DuplicateBinding.glsl
### Compilation failed:

error: 2: layout(set=0, binding=0) has already been defined
layout(set=0, binding=0) uniform bufferTwo { int[4] y; };
                                 ^^^^^^^^^
error: 9: layout(binding=1) has already been defined
layout(binding=1) uniform bufferFive { float q; };
                          ^^^^^^^^^^
2 errors
